# bob-coach

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  PLAN_PHASE1.md  PLAN_PHASE2.md  PLAN_PHASE3.md  README.md  demo.ps1  gen_demo_outputs.py  pyproject.toml
.bob/: rules.md
.bob/commands/: coach.md
bob_sessions/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4a-renderer-polish.md  phase-4b-self-coached.md  phase-planning.md
demo/outputs/: phase-0-report.json  phase-0-report.txt  phase-1-compact.txt  phase-1-report.json  phase-1-report.txt  phase-2-report.json  phase-2-report.txt  phase-3-report.json  phase-3-report.txt  phase-4a-renderer-polish-report.json  phase-4a-renderer-polish-report.txt  phase-4b-self-coached-report.json  phase-4b-self-coached-report.txt  phase-planning-report.json  phase-planning-report.txt  sample-session-01-report.json  sample-session-01-report.txt  sample-session-02-report.json  sample-session-02-report.txt
fixtures/: sample-session-01.md  sample-session-02.md
src/bob_coach/: __init__.py  cli.py  detectors.py  metrics.py  models.py  parser.py  report.py  rules.py
tests/: __init__.py  test_detectors.py  test_parser.py  test_report.py
